--- a/aula 6/index.html
+++ b/aula 6/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>aula 6</title>
 </head>
 <body>
     <div>
         <h1>Adicionar produtos</h1>
         <form action="adicionar_produto.php" method="post">
+        <div>
             <div>
                 <label for="nome">Nome do produto</label>
                 <input type="text" name="nome" id="nome">
@@ -25,6 +27,7 @@
                 <button type="submit">Adicionar</button>
                 <button type="reset">Limpar</button>
             </div>
+        </div>
         </form>
     </div>
 </body>
